finance (#51)
* finance

* error seed

* fix

* fix
